--- a/Classic Snake/Classic Snake/Classic Snake.csproj
+++ b/Classic Snake/Classic Snake/Classic Snake.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Circle.cs" />
+    <Compile Include="Snake.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
